--- a/protapp/package.json
+++ b/protapp/package.json
@@ -10,6 +10,11 @@
     "native-base": "^2.8.1",
     "react": "16.6.1",
     "react-native": "0.57.5",
+    "react-native-autolink": "^1.4.0",
+    "react-native-link": "^4.1.0",
+    "react-native-settings-list": "^1.8.0",
+    "react-native-swiper": "^1.5.13",
+    "react-native-vector-icons": "^6.0.2",
     "react-navigation": "^2.18.2"
   },
   "devDependencies": {
