--- a/protapp/package.json
+++ b/protapp/package.json
@@ -7,6 +7,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "base-64": "^0.1.0",
     "native-base": "2.8.1",
     "react": "16.6.1",
     "react-native": "0.57.5",
@@ -15,7 +17,10 @@
     "react-native-settings-list": "1.8.0",
     "react-native-swiper": "1.5.13",
     "react-native-vector-icons": "6.0.2",
-    "react-navigation": "2.18.2"
+    "react-navigation": "2.18.2",
+    "react-redux": "^5.1.1",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
